--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Sofía Ornella Palavecino",
   "license": "ISC",
   "dependencies": {
     "node-fetch": "^2.7.0",
