--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "author": "Sofía Ornella Palavecino",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "firebase": "^10.11.1",
     "node-fetch": "^2.7.0",
     "xml2js": "^0.6.2"
   }
