--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
+    "firebase-admin": "^12.3.1",
     "node-fetch": "^2.7.0",
     "xml2js": "^0.6.2"
   }
